# compmathlab1

./: pyproject.toml
compmathlab1/: argparser.py  gauss_solver.py  logger.py  main.py  solver.py  utils.py  validators.py
