[project]
name = "compmathlab1"
version = "0.1.0"
description = ""
authors = [
    {name = "lavrentious",email = "lavrent0@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "mypy (>=1.15.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
